--- a/symbnb/templates/ad/new.html.twig
+++ b/symbnb/templates/ad/new.html.twig
@@ -7,5 +7,17 @@
 {% block body %}
     <div class="container">
         <h1>Crée une nouvelle annonce</h1>
+
+        {{ form_start(form) }}
+
+        <div class="form-group">
+            {{form_label(form.title)}}
+            {{form_widget(form.title, {'attr': {'class': 'form-control', 'placeholder':'titre de l\'annonce'}})}}
+        </div>
+
+        
+        {{ form_label(form.title) }}
+        <button class="btn btn-primary">Créer une votre annonce</button>
+        {{ form_end(form)}}
     </div>
 {% endblock %}
