--- a/symbnb/templates/ad/edit.html.twig
+++ b/symbnb/templates/ad/edit.html.twig
@@ -1,23 +1,21 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Créer votre annonce {% endblock %}
+{% block title %}Modifiez votre annonce{% endblock %}
 
 {% form_theme form 'ad/_collection.html.twig' %}
 
 {% block body %}
-
     <div class="container">
-        <h1>Crée une nouvelle annonce</h1>
-
+        <h1>Modifier l'annonce :{{ad.title}}</h1>
+        
         {{ form_start(form) }}
-
+        
         {{ form_widget(form) }}
         
-        <button class="btn btn-primary">Créer votre annonce</button>
-
+        <button class="btn btn-primary">Enregistrer les modifications</button>
+        
         {{ form_end(form)}}
     </div>
-
 {% endblock %}
 
 {% block javascripts %}
