--- a/symbnb/templates/ad/index.html.twig
+++ b/symbnb/templates/ad/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="my-3">Les annonces de nos hôtes</h1>
+        <h1 class="my-3">Des logements extraordinnaires partout !</h1>
 
         <div class="row">
             {% for ad in ads %}
