--- a/symbnb/templates/partials/header.html.twig
+++ b/symbnb/templates/partials/header.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">SymBnB</a>
+    <a class="navbar-brand" href="{{path('homepage')}}">SymBnB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
         aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,16 +8,29 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{path('homepage')}}">Acceuil <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{path('homepage')}}">Acceuil<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{path('ad_index')}}">Annonces <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{path('ad_index')}}">Annonces<span class="sr-only">(current)</span></a>
             </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a href="#">Mon Compte</a>
+                <a class="nav-link" aria-hidden="true"><hr><span class="sr-only">(current)</span></a>
             </li>
+            {% if app.user %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('account_logout')}}">Déconnexion<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Mon Compte</a>
+                </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('account_login')}}">Connexion<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('account_register')}}">Inscription<span class="sr-only">(current)</span></a>
+                    </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
