--- a/symbnb/templates/account/password.html.twig
+++ b/symbnb/templates/account/password.html.twig
@@ -4,7 +4,11 @@
 
 {% block body %}
     <div class="container">
-        <h1>Modifications de votre mot de passe</h1>
-        
+        <h1>Modifier votre mot de passe</h1>
+
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <button type="submit" class="btn btn-success">Sauvegarder les modifications</button>
+        {{ form_end(form) }}
     </div>
 {% endblock %}
