--- a/symbnb/templates/partials/header.html.twig
+++ b/symbnb/templates/partials/header.html.twig
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
     <a class="navbar-brand" href="{{path('homepage')}}">SymBnB</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
         aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -13,23 +15,32 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{path('ad_index')}}">Annonces<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" aria-hidden="true"><hr><span class="sr-only">(current)</span></a>
-            </li>
+            <div class="dropdown-divider"></div>
+        </ul>
+        <ul class="navbar-nav ml-auto">    
             {% if app.user %}
+                <li class="nav-item dropdown">
+                    <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
+                        <img src="{{app.user.picture}}" alt="avatar de {{app.user.fullName}}" class="avatar avatar-mini">
+                        {{ app.user.fullName }}
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
+                        <a href="{{ path('ads_create')}}" class="dropdown-item">Créer une annonce</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('account_index') }}" class="dropdown-item">Mon Compte</a>
+                        <a href="{{ path('account_profile') }}" class="dropdown-item">Modifier mon profil</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('account_logout')}}" class="dropdown-item">Déconnexion</a>
+                    </div>
+                </li>
+            {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{path('account_logout')}}">Déconnexion<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{path('account_login')}}">Connexion<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Mon Compte</a>
+                    <a class="nav-link" href="{{path('account_register')}}">Inscription<span class="sr-only">(current)</span></a>
                 </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('account_login')}}">Connexion<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('account_register')}}">Inscription<span class="sr-only">(current)</span></a>
-                    </li>
             {% endif %}
         </ul>
     </div>
