--- a/symbnb/templates/user/index.html.twig
+++ b/symbnb/templates/user/index.html.twig
@@ -4,10 +4,41 @@
 
 {% block body %}
     <div class="container">
-        <h1>{{user.fullName}}</h1>
-        <div>
-            <img src="{{user.picture}}" class="avatar" alt="avatar de {{user.fullName}}">
+        <div class="row align-items-center">
+            <div class="col-3 text-center">
+                <img src="{{user.picture}}" class="avatar mb-3" alt="avatar de {{user.fullName}}">
+                <br>
+                <span class="badge badge-primary ">{{user.ads | length}} annonces</span>
+            </div>
+            <div class="col-9">
+                <h1>{{user.fullName}}</h1>
+                <p>{{user.introduction }}</p>
+                {% if user is same as(app.user)  %}
+                    <div class="mt-3">
+                        <a href="{{ path('account_profile')}}" class="btn btn-primary mr-2 mb-2">Modifier mon profil</a>
+                        <a href="{{ path('account_password')}}" class="btn btn-primary mr-2 mb-2">Changer de mot de passe</a>
+                    </div>
+                {% endif %}
+            </div>
         </div>
-
+        <div class="mt-3">
+            {{user.description | raw}}
+        </div>
+        <hr>
+        <h2>Les annonces de {{user.fullName}}</h2>
+        <br>
+        {% if user.ads | length > 0 %}
+            <div class="row">
+                {% for ad in user.ads %}
+                    {% include 'ad/_ad.html.twig'%}
+                {% endfor %}
+            </div>
+        {% else %}
+        <div class="alert alert-warning">
+            <p>
+                <strong>{{ user.fullName }}</strong> n'as pas encore d'annonces
+            </p>
+        </div>
+        {% endif %}
     </div>
 {% endblock %}
