--- a/symbnb/templates/booking/book.html.twig
+++ b/symbnb/templates/booking/book.html.twig
@@ -24,7 +24,12 @@
     <h4>Prix du séjour : <span id="amount">...</span> &euro;</h4>
     <span id="days">0</span> nuit(s) à {{ad.price}} /nuit
 
+    <h2>Vous avez un commentaire ?</h2>
+    {{ form_row(form.comment) }}
+    <h2>Vous avez terminez !</h2>
+    <p>Vacances, boulot ? On s'en charge !</p>
+    <button type="submit" class="btn btn-success">Reserver !</button>
     {{form_end(form)}}
-    
+
 </div>
 {% endblock %}
