--- a/symbnb/templates/booking/show.html.twig
+++ b/symbnb/templates/booking/show.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Réservation : <strong>{{booking.id}}</strong>{% endblock %}
+{% block title %}Réservation n°{{booking.id}}{% endblock %}
 
 {% block body %}
 
@@ -12,6 +12,24 @@
             <h1>Votre Réservation pour {{booking.ad.title}}</h1>
             <p><strong>Numéro de réservation: {{booking.id}}</strong></p>
         </div>
+        
+        {% if app.request.query.get('withAlert') %}
+            <div class="alert alert-success">
+                <h4 class="alert-heading">Bravo !</h4>
+                <p>
+                    Votre réservation auprès de
+                    <strong>
+                        <a href="{{ path("user_show", {'slug': author.slug}) }}">{{author.fullName}}</a>
+                    </strong>
+                    pour l'annonce
+                    <strong>
+                        <a href="{{ path("ad_show", {"slug":ad.slug}) }}">{{ad.title}}</a>
+                    </strong>
+                    a bien été pris en compte !
+                </p>
+            </div>
+        {% endif %}
+        
 
         <div class="row">
             <div class="col">
@@ -59,8 +77,14 @@
                     <h2>Votre hébergement</h2>
 
                     <h4>
-                        <a href="{{ path('ad_show', {'slug': ad.slug})}}">{{ad.title}}</a>
+                        <a href="{{ path('ad_show', {'slug': ad.slug}) }}">{{ad.title}}</a>
                     </h4>
+
+                    <img src="{{ad.coverImage}}" alt="image de {{ad.title}}" class="img-fluid">
+
+                    {{ad.content | raw}}
+
+                    <a href="{{ path('ad_show', {'slug': ad.slug}) }}" class="btn btn-primary">Plus d'infos sur votre hébergement</a>
                 </div>
             </div>
         </div>
