--- a/symbnb/templates/base.html.twig
+++ b/symbnb/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>SymBnB - {% block title %}SymBnB{% endblock %}</title>
+        <title>{% block title %}SymBnB{% endblock %}- SymBnB</title>
 
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/app.css">
