--- a/symbnb/templates/booking/book.html.twig
+++ b/symbnb/templates/booking/book.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Réservation{% endblock %}
 
+{% block stylesheets %}
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+    integrity="sha256-siyOpF/pBWUPgIcQi17TLBkjvNgNQArcmwJB8YvkAgg=" crossorigin="anonymous" />
+{% endblock %}
+
 {% block body %}
 <div class="container">
     <h1>Réservation pour la chambre : {{ ad.title }}</h1>
@@ -19,17 +25,60 @@
                 {{form_row(form.endDate)}}
             </div>
         </div>
+        <h4>Prix du séjour : <span id="amount">...</span> &euro;</h4>
+        <span id="days">0</span> nuit(s) à {{ad.price}} &euro; /nuit(s)
+    
+        <h4 class="mt-3">Vous avez un commentaire ?</h4>
+        {{ form_row(form.comment) }}
     </div>
 
-    <h4>Prix du séjour : <span id="amount">...</span> &euro;</h4>
-    <span id="days">0</span> nuit(s) à {{ad.price}} /nuit
-
-    <h2>Vous avez un commentaire ?</h2>
-    {{ form_row(form.comment) }}
     <h2>Vous avez terminez !</h2>
     <p>Vacances, boulot ? On s'en charge !</p>
     <button type="submit" class="btn btn-success">Reserver !</button>
     {{form_end(form)}}
 
 </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
+        integrity="sha256-bqVeqGdJ7h/lYPq6xrPv/YGzMEb6dNxlfiTUHSgRCp8=" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function(){
+            $('#booking_startDate, #booking_endDate').datepicker({
+                format: 'dd/mm/yyyy',
+                datesDisabled: [
+                    {% for day in ad.notAvailableDays %}
+                        "{{ day.format('d/m/Y') }}", 
+                    {% endfor %}
+                ],
+                startDate: new Date(),
+                todayHighlight: true,
+                weekStart: 1
+            });
+
+             $('#booking_startDate, #booking_endDate').on('change', amoutCalculate);
+        })
+
+        function amoutCalculate() {
+            const endDate = new Date($('#booking_endDate').val().replace(/(\d+)\/(\d+)\/(\d{4})/, '$3-$2-$1' ));
+            //18/09/2018
+            // (\d+)\/(\d+)\/(\d{4})
+            //2018-09-18
+            const startDate = new Date($('#booking_startDate').val().replace(/(\d+)\/(\d+)\/(\d{4})/, '$3-$2-$1'));
+
+            if(startDate && endDate && startDate < endDate){
+                const DAY_TIME = 24 * 60 * 60 * 1000;
+
+                const interval = endDate.getTime() - startDate.getTime();
+                const days = interval / DAY_TIME;
+                const amount = days * {{ ad.price }};
+
+                $('#days').text(days);
+                $('#amount').text(amount.toLocaleString('fr-FR'));
+            }
+        }
+
+    </script>
+
 {% endblock %}
