--- a/symbnb/public/css/app.css
+++ b/symbnb/public/css/app.css
@@ -31,3 +31,6 @@ div.carousel-caption{
 .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
     color:firebrick !important;
 }
+.rating{
+    color: goldenrod;
+}
