--- a/symbnb/templates/booking/show.html.twig
+++ b/symbnb/templates/booking/show.html.twig
@@ -47,11 +47,9 @@
                         <dt class="col-md-4">Montant total</dt>
                         <dd class="col-md-8">{{booking.amount}} &euro;</dd>
                         <dt class="col-md-4">Commentaire</dt>
-                        <dd class="col-md-8">{{booking.comment}}</dd>
+                        <dd class="col-md-8">{{booking.comment | default('Aucun commentaire')}}</dd>
                     </dl>
-
                     <hr>
-
                     <h2 class="alert-heading">Votre hôte</h2>
 
                     <div class="row mb-3">
@@ -70,6 +68,28 @@
 
                     <a href="{{ path("user_show", {'slug': author.slug})}}" 
                         class="btn btn-secondary">Plus d'infos sur {{author.firstName}}</a>
+                </div>
+
+                <div class="alert alert-light">
+                    <h2 class="alert-heading" id="comment">Votre avis compte !</h2>
+                    {% if date() > date(booking.endDate) %}
+                        {% set comment = booking.ad.commentFromAuthor(app.user)  %}
+                            {% if comment is not null %}
+                                <blockquote>
+                                    {{comment.content}}
+                                </blockquote>
+                                <strong>Note :</strong>
+                                {% include 'partials/rating.html.twig' with {'rating': comment.rating } %}
+                            {% else %}
+                                {{ form_start(form) }}
+                                {{ form_widget(form) }}
+                                <button type="submit" class="btn btn-success">Envoyez</button>
+                                {{ form_end(form) }}
+                            {% endif %}
+                    {% else %}
+                        <p>Notez cette annonce à la fin de votre séjour !</p>
+                    {% endif %}
+                    
                 </div>
             </div>
             <div class="col">
