Design update refreshing the app

--- a/symbnb/templates/booking/show.html.twig
+++ b/symbnb/templates/booking/show.html.twig
@@ -9,7 +9,7 @@
 
     <div class="container">
         <div class="bg-light my-5">
-            <h1>Votre Réservation pour {{booking.ad.title}}</h1>
+            <h1 class="my-5">Votre Réservation pour {{booking.ad.title}}</h1>
             <p><strong>Numéro de réservation: {{booking.id}}</strong></p>
         </div>
         
@@ -45,7 +45,7 @@
                         <dt class="col-md-4">Nombre de nuit(s)</dt>
                         <dd class="col-md-8">{{booking.duration}}</dd>
                         <dt class="col-md-4">Montant total</dt>
-                        <dd class="col-md-8">{{booking.amount}} &euro;</dd>
+                        <dd class="col-md-8">{{booking.amount| number_format(2, ',', ' ')}} &euro;</dd>
                         <dt class="col-md-4">Commentaire</dt>
                         <dd class="col-md-8">{{booking.comment | default('Aucun commentaire')}}</dd>
                     </dl>
