--- a/symbnb/public/css/app.css
+++ b/symbnb/public/css/app.css
@@ -6,6 +6,11 @@ div.ad-title{
     background-size: cover;
     background-position: center center;
 }
+div.ad-title .btn {
+    margin-top: 2em;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
 div.ad-title h1, div.ad-title p{
     color: white;
     text-shadow: 3px 3px 3px rgba(0,0,0, 0.5);
@@ -33,4 +38,11 @@ div.carousel-caption{
 }
 .rating{
     color: goldenrod;
+}
+.alert a {
+    text-decoration: none;
+}
+
+.alert .btn {
+    color: white;
 }
