--- a/symbnb/templates/account/bookings.html.twig
+++ b/symbnb/templates/account/bookings.html.twig
@@ -4,14 +4,14 @@
 
 {% block body %}
     <div class="container">
-        <h1>Mes réservations</h1>
+        <h1 class="my-5">Mes réservations</h1>
         <div class="alert alert-info mt-3">
             <p>Retrouvez toute vos réservations</p>
         </div>
         {% for booking in app.user.bookings %}
             {% set ad = booking.ad %}
             <div class="row mt-3 bg-light ">
-                <div class="col-4">
+                <div class="col-md-4">
                     <img src="{{ ad.coverImage}}" alt="photo de {{ad.title}}" class="img-fluid rounded">
                     <strong>Note de l'annonce:</strong><br>  
                     {% include "partials/rating.html.twig" with {'rating': ad.avgRatings} %}
@@ -24,12 +24,12 @@
                     {% endif %}
                     
                 </div>
-                <div class="col-8">
+                <div class="col-md-8">
                     <h4>{{ad.title}}</h4>
                     <p>
                         Réservation <strong>n°{{booking.id}}</strong><br>
                         Du {{booking.startDate | date('d/m/Y') }} au {{booking.endDate | date('d/m/Y')}}
-                        ({{booking.amount}} &euro;)
+                        ({{booking.amount | number_format(2, ',', ' ')}} &euro;)
                     </p>
                     <a href="{{ path("booking_show", {'id': booking.id})}}" class="btn btn-info">Voir la réservation</a>
                 </div>
