--- a/symbnb/templates/account/password.html.twig
+++ b/symbnb/templates/account/password.html.twig
@@ -4,11 +4,14 @@
 
 {% block body %}
     <div class="container">
-        <h1>Modifier votre mot de passe</h1>
-
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-success">Sauvegarder les modifications</button>
-        {{ form_end(form) }}
+        <h1 class="my-5">Modifier votre mot de passe</h1>
+        <div class="alert alert-light">
+            {{ form_start(form) }}
+            {{ form_widget(form) }}
+            <button type="submit" class="btn btn-success">
+                <i class="fas fa-check"></i>
+                Sauvegarder les modifications</button>
+            {{ form_end(form) }}
+        </div>
     </div>
 {% endblock %}
