--- a/symbnb/templates/account/profile.html.twig
+++ b/symbnb/templates/account/profile.html.twig
@@ -4,11 +4,36 @@
 
 {% block body %}
     <div class="container">
-        <h1>Modifier votre profil</h1>
+        <h1 class="my-5">Modifier votre profil</h1>
 
         {{ form_start(form) }}
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-light">
+                    <h2 class="alert-heading">Informations générales</h2>
+                    <hr>
+                    {{ form_row(form.firstname) }}
+                    {{ form_row(form.lastname) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.picture) }}
+                </div>
+            </div>
+            <div class="col">
+                <div class="alert alert-light">
+                    <h2 class="alert-heading">Détails</h2>
+                    <hr>
+                    {{ form_row(form.introduction) }}
+                    {{ form_row(form.description) }}
+                    <hr>
+                    <h3 class="alert-heading h5">Vous avez terminé ? Sauvegarder !</h3>
+                    <button type="submit" class="btn btn-success">
+                        <i class="fas fa-check"></i>
+                        Sauvegarder les modifications
+                    </button>
+                </div>
+            </div>
+        </div>    
         {{ form_widget(form) }}
-        <button type="submit" class="btn btn-success">Sauvegarder les modifications</button>
 
         {{ form_end(form) }}
     </div>
