--- a/symbnb/templates/ad/_ad.html.twig
+++ b/symbnb/templates/ad/_ad.html.twig
@@ -2,7 +2,7 @@
     {% set url = path('ad_show', {'slug':ad.slug})  %}
     <div class="card bg-light mb-3">
         <div class="card-header text-center">
-            {{ad.rooms}} chambres, <strong>{{ad.price}}&euro; /nuit</strong>
+            {{ad.rooms}} chambres, <strong>{{ad.price| number_format(2, ',', ' ')}}&euro; par nuit</strong>
             <br>
             {% if ad.comments|length > 0 %}
                 {% include 'partials/rating.html.twig' with {'rating': ad.avgRatings()} %}
@@ -22,7 +22,7 @@
             <p class="card-text">
                 {{ad.introduction}}
             </p>
-            <a href="{{url}}" class="btn btn-secondary">En Savoir Plus !</a>
+            <a href="{{url}}" class="btn btn-primary float-right">En Savoir Plus !</a>
 
             {% if app.user and app.user == ad.author %}
                 <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
