--- a/symbnb/templates/ad/_collection.html.twig
+++ b/symbnb/templates/ad/_collection.html.twig
@@ -5,7 +5,9 @@
 {{ form_widget(form)}}
 
 <div class="form-group">
-    <button type="button" id="add-image" class="btn btn-primary">Ajouter une image</button>
+    <button type="button" id="add-image" class="btn btn-primary">
+        <i class="fas fa-plus"></i>
+        Ajouter une image</button>
 </div>
 {% endblock %}
 
@@ -28,7 +30,9 @@
             </div>
         </div>
         <div class="col-2">
-            <button type="button" data-action="delete" data-target="#block_{{ id }}" class="btn btn-danger">X</button>
+            <button type="button" data-action="delete" data-target="#block_{{ id }}" class="btn btn-danger">
+                X
+            </button>
         </div>
     </div>
 </div>
