--- a/symbnb/templates/ad/new.html.twig
+++ b/symbnb/templates/ad/new.html.twig
@@ -7,14 +7,42 @@
 {% block body %}
 
     <div class="container">
-        <h1>Crée une nouvelle annonce</h1>
+        <h1 class="my-5">Crée une nouvelle annonce</h1>
 
         {{ form_start(form) }}
-
-        {{ form_widget(form) }}
-        
-        <button class="btn btn-primary">Créer votre annonce</button>
-
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-light">
+                    <h2>Informations générales</h2>
+                    <hr>
+                    {{ form_row(form.title) }}
+                    {{ form_row(form.slug) }}
+                    {{ form_row(form.price) }}
+                    {{ form_row(form.rooms) }}
+                </div>
+                <div class="alert alert-light">
+                    <h2>Détails de l'annonce</h2>
+                    <hr>
+                    {{ form_row(form.introduction) }}
+                    {{ form_row(form.content) }}
+                </div>
+            </div>
+            <div class="col">
+                <div class="alert alert-light">
+                    <h2>Images de l'annonce</h2>
+                    <hr>
+                    {{ form_row(form.coverImage) }}
+                    {{ form_row(form.images) }}
+                </div>
+            </div>
+        </div>
+        <div class="alert alert-success clearfix">
+            <h2 class="alert-heading">Sauvegarder mon annonce</h2>
+            <p>Prêt a creer votre annonce ? C'est parti !</p>
+            <button class="btn btn-primary float-right">
+                <i class="fas fa-check"></i>
+                Créer votre annonce</button>
+        </div>
         {{ form_end(form)}}
     </div>
 
