--- a/symbnb/templates/booking/book.html.twig
+++ b/symbnb/templates/booking/book.html.twig
@@ -10,13 +10,13 @@
 
 {% block body %}
 <div class="container">
-    <h1>Réservation pour la chambre : {{ ad.title }}</h1>
+    <h1>Réservation pour la chambre :<em>{{ ad.title }}</em></h1>
 
     <p>Réserver la chambre d'hôte de  <strong>{{ ad.author.FullName }}</strong> , on s'en occupe ! </p>
 
     {{ form_start(form) }}
     <div class="alert alert-light">
-        <h2>Commencez par nous dire quelles sont vos dates de disponibilité</h2>
+        <h2 class="h4">Commencez par nous dire quand...</h2>
         <div class="row">
             <div class="col">
                 {{form_row(form.startDate)}}
@@ -25,8 +25,8 @@
                 {{form_row(form.endDate)}}
             </div>
         </div>
-        <h4>Prix du séjour : <span id="amount">...</span> &euro;</h4>
-        <span id="days">0</span> nuit(s) à {{ad.price}} &euro; /nuit(s)
+        <h4 class="mt-2">Prix du séjour : <span id="amount">...</span> &euro;</h4>
+        <span id="days">0</span> nuit(s) à {{ad.price | number_format(2, ',', ' ')}} &euro; par nuit(s)
     
         <h4 class="mt-3">Vous avez un commentaire ?</h4>
         {{ form_row(form.comment) }}
