--- a/symbnb/templates/admin/partials/header.html.twig
+++ b/symbnb/templates/admin/partials/header.html.twig
@@ -10,14 +10,44 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{path('homepage')}}">Acceuil<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-chart-line"></i>    
+                    Tableau de bord
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{path('ad_index')}}">Annonces<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{path('admin_ads_index')}}">
+                    <i class="fas fa-hotel"></i>
+                    Annonces
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-folder"></i>
+                    Réservations
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-comments"></i>
+                    Commentaires
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-users"></i>
+                    Utilisateurs
+                </a>
             </li>
             <div class="dropdown-divider"></div>
         </ul>
-        <ul class="navbar-nav ml-auto">    
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="{{ path('homepage')}}" target="_blank" class="nav-link">
+                    <i class="fas fa-eye"></i>
+                    Voir le site
+                </a>
+            </li>    
             {% if app.user %}
                 <li class="nav-item dropdown">
                     <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
@@ -26,21 +56,9 @@
                     </a>
 
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
-                        <a href="{{ path('ads_create')}}" class="dropdown-item">Créer une annonce</a>
-                        <div class="dropdown-divider"></div>
-                        <a href="{{ path('account_index') }}" class="dropdown-item">Mon Compte</a>
-                        <a href="{{ path('account_bookings')}}" class="dropdown-item">Mes réservations</a>
-                        <a href="{{ path('account_profile') }}" class="dropdown-item">Modifier mon profil</a>
                         <div class="dropdown-divider"></div>
                         <a href="{{ path('account_logout')}}" class="dropdown-item">Déconnexion</a>
                     </div>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{path('account_login')}}">Connexion<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{path('account_register')}}">Inscription<span class="sr-only">(current)</span></a>
                 </li>
             {% endif %}
         </ul>
