--- a/symbnb/templates/admin/partials/header.html.twig
+++ b/symbnb/templates/admin/partials/header.html.twig
@@ -57,7 +57,7 @@
 
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
                         <div class="dropdown-divider"></div>
-                        <a href="{{ path('account_logout')}}" class="dropdown-item">Déconnexion</a>
+                        <a href="{{ path('admin_account_logout')}}" class="dropdown-item">Déconnexion</a>
                     </div>
                 </li>
             {% endif %}
