Creating controller of admin comment booking ad ect
Building administration

--- a/symbnb/templates/admin/ad/edit.html.twig
+++ b/symbnb/templates/admin/ad/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends "admin/base.html.twig" %}
 
 {% block title %}Correction d'annonce{% endblock %}
-
+{% form_theme form _self %}
 {% block body %}
     <div class="container">
         <h1 class="my-5">Modération de l'annonce: <em>{{ad.title}}</em></h1>
@@ -98,9 +98,49 @@
                 
             </div>
         </div>
-        
-        
         {{form_end(form)}}
-
     </div>
+{% endblock %}
+
+{% block _ad_images_widget %}
+    
+        {{ form_widget(form) }}
+    
+{% endblock %}
+
+{% block _ad_images_entry_row %}
+    <div class="" id="block_{{id}}">
+    {{ form_widget(form) }}
+    </div>
+{% endblock %}
+
+{% block _ad_images_entry_widget %}
+    <div class="row align-items-center mb-3">
+        <div class="col-4">
+            {% if value %}
+                <img src="{{value.url}}" alt="" class="img-fluid rounded">
+            {% endif %}
+        </div>
+        <div class="col-6">
+            {{ form_row(form.caption) }}
+        </div>
+        <div class="col">
+            <button type="button" class="btn btn-danger" data-action="delete" data-target="#block_{{id}}">
+                <i class="fas fa-trash"></i>
+            </button>
+        </div>
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+
+    <script>
+        $(document).ready(function() {
+            $('[data-action="delete"]').on('click', function(){
+                const target = this.dataset.target;
+                $(target).remove();
+            });
+        } );
+    </script>
+
 {% endblock %}
