--- a/symbnb/templates/admin/ad/index.html.twig
+++ b/symbnb/templates/admin/ad/index.html.twig
@@ -4,7 +4,10 @@
 
 {% block body %}
 <div class="container-fluid">
-    <h1 class="my-5">Gestion des annonces</h1>
+    <h1 class="my-5">
+        <i class="fas fa-hotel"></i>
+        Gestion des annonces
+    </h1>
     <table class="table table-hover">
         <thead>
             <tr>
@@ -39,7 +42,7 @@
                 </td>
                 <td class="text-center">
                     <a href="{{ path('admin_ads_edit', {'id': ad.id})}}" class="btn btn-primary"><i class="fas fa-edit"></i></a>
-                    <a href="" class="btn btn-danger"><i class="fas fa-trash"></i></a>
+                    <a href="{{ path('admin_ads_delete', {'id': ad.id})}}" class="btn btn-danger"><i class="fas fa-trash"></i></a>
                 </td>
             </tr>
             {% endfor %}
