Creating custom service : PaginationService

--- a/symbnb/templates/admin/ad/index.html.twig
+++ b/symbnb/templates/admin/ad/index.html.twig
@@ -21,7 +21,7 @@
         </thead>
 
         <tbody>
-            {% for ad in ads %}
+            {% for ad in pagination.data %}
             <tr>
                 <td>{{ad.id}}</td>
                 <td>{{ad.title}}</td>
@@ -48,5 +48,7 @@
             {% endfor %}
         </tbody>
     </table>
+    {{ pagination.display() }}
+    {# {% include "admin/partials/pagination.html.twig" with {'route': 'admin_ads_index'} %} #}
 </div>
 {% endblock %}
