--- a/symbnb/templates/admin/booking/index.html.twig
+++ b/symbnb/templates/admin/booking/index.html.twig
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for booking in bookings %}
+                {% for booking in pagination.data %}
                     <tr>
                         <td>{{booking.id}}</td>
                         <td>{{booking.createdAt|date('d/m/Y')}}</td>
@@ -45,5 +45,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        {{ pagination.display() }}
     </div>
 {% endblock %}
