--- a/symbnb/templates/admin/comment/index.html.twig
+++ b/symbnb/templates/admin/comment/index.html.twig
@@ -22,7 +22,7 @@
         </thead>
     
         <tbody>
-            {% for comment in comments %}
+            {% for comment in pagination.data %}
             <tr>
                 <td>{{comment.id}}</td>
                 <td>{{comment.createdAt|date('d/m/Y h:i')}}</td>
@@ -55,5 +55,6 @@
             {% endfor %}
         </tbody>
     </table>
+    {{ pagination.display() }}
 </div>
 {% endblock %}
